@@ -12,6 +12,8 @@ import org.arispay.enums.ClientIdentifierType;
 import org.arispay.enums.RecordStatus;
 import org.springframework.data.jpa.domain.Specification;
 
+import java.time.LocalDate;
+import java.time.LocalDateTime;
 import java.util.ArrayList;
 import java.util.List;
 
@@ -37,19 +39,45 @@ public class TransactionSpecification {
                 predicates.add(criteriaBuilder.equal(root.get("client").get("clientId"), clientId));
             }
 
-            // Generic Filter Specifications
-//            if (filterDto != null && filterDto.getFilters() != null) {
-//                // Record Status Filter
-//                if (!filterDto.getFilters().isEmpty() && filterDto.getFilters().get(0) != null && !filterDto.getFilters().get(0).isEmpty()) {
-//                    try {
-//                        RecordStatus status = RecordStatus.fromString(filterDto.getFilters().get(0));
-//                        predicates.add(criteriaBuilder.equal(root.get("recordStatus"), status));
-//                    } catch (IllegalArgumentException e) {
-//                        logger.info("Invalid status: {}. Error message: {}", filterDto.getFilters().get(0), e.getMessage());
-//                    }
-//                }
-//
-//                // Client Identifier Type Filter
+            //Generic Filter Specifications
+            if (filterDto != null && filterDto.getFilters() != null) {
+                // Bank  Filter
+                if (!filterDto.getFilters().isEmpty() && filterDto.getFilters().get(0) != null && !filterDto.getFilters().get(0).toString().isEmpty()) {
+                    try {
+                        predicates.add(criteriaBuilder.equal(root.get("companyAccount").get("bank").get("bankCode"), filterDto.getFilters().getFirst()));
+                    } catch (IllegalArgumentException e) {
+                        logger.info("Invalid bank: {}. Error message: {}", filterDto.getFilters().getFirst(), e.getMessage());
+                    }
+                }
+                List<LocalDate> dateRange = (List<LocalDate>) filterDto.getFilters().get(2);
+                if (filterDto.getFilters().get(2) != null && !dateRange.isEmpty()) {
+
+                    try {
+
+                        predicates.add(criteriaBuilder.greaterThanOrEqualTo(root.get("transDate"), dateRange.getFirst()));
+                        predicates.add(criteriaBuilder.lessThanOrEqualTo(root.get("transDate"), dateRange.getLast().plusDays(1)));
+                    } catch (Exception e) {
+                        logger.info("Invalid dateRange: {}. Error message: {}", filterDto.getFilters().get(2).toString(), e.getMessage());
+                    }
+                }
+
+                if (!filterDto.getFilters().isEmpty() && filterDto.getFilters().get(3) != null && !filterDto.getFilters().get(3).toString().isEmpty()) {
+                    try {
+                        predicates.add(criteriaBuilder.equal(root.get("companyAccount").get("id"), filterDto.getFilters().get(3)));
+                    } catch (IllegalArgumentException e) {
+                        logger.info("Invalid Company Account: {}. Error message: {}", filterDto.getFilters().get(3), e.getMessage());
+                    }
+                }
+
+                if (!filterDto.getFilters().isEmpty() && filterDto.getFilters().get(4) != null && !filterDto.getFilters().get(4).toString().isEmpty()) {
+                    try {
+                        predicates.add(criteriaBuilder.equal(root.get("crDrInd"), filterDto.getFilters().get(4)));
+                    } catch (IllegalArgumentException e) {
+                        logger.info("Invalid CR DR Indicator: {}. Error message: {}", filterDto.getFilters().get(4), e.getMessage());
+                    }
+                }
+
+                // Client Identifier Type Filter
 //                if (filterDto.getFilters().size() > 1 && filterDto.getFilters().get(1) != null && !filterDto.getFilters().get(1).isEmpty()) {
 //                    try {
 //                        ClientIdentifierType identifierType = ClientIdentifierType.valueOf(filterDto.getFilters().get(1));
@@ -58,8 +86,8 @@ public class TransactionSpecification {
 //                        logger.info("Invalid identifier type: {}. Error message: {}", filterDto.getFilters().get(1), e.getMessage());
 //                    }
 //                }
-//
-//            }
+
+            }
 
             // Combine all predicates
             return criteriaBuilder.and(predicates.toArray(new Predicate[0]));
